--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Cashier Albert Heijn</h4>
+                  <h5><i>September 2021&ndash;Now</i></h5>
+                    <h5><i>September 2017&ndash;August 2019</i></h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Side job</li>
+                    <li>Scanning articles and signaling deviating items</li>
+                    <li>Carrying out payment processes and age checks</li>
+                    <li>Helping customers when needed</li>
                   </ul>
                 </div>
               </li>
@@ -107,12 +109,31 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>Microbiological Analyst, Royal Swinkels Family Brewers</h4>
+                  <h5><i>January 2020 &ndash; June 2020</i></h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
+                    <ul class="biography-details list-unstyled">
+                    <li>Part of my MBO study at Summa College</li>
+                    <li>Performing microbiological tests on products from the brewery </li>
+                  </ul>
                 </div>
               </li>
 
+                  <li class="biography-item row mb-2">
+                <!-- We're using a grid inside a grid so we can align logos and text -->
+                <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                </div>
+                <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
+                  <h4>Molecular &ndash; Biological Analyst, Maastricht UMC +</h4>
+                  <h5><i>August 2019 &ndash; January 2020</i></h5>
+                  <!-- Use the list below to talk about your achievements -->
+                  <ul class="biography-details list-unstyled">
+                    <li>Part of my MBO study at Summa College</li>
+                    <li>Performing molecular tests on patient samples to detect HIV, Hepatitis B and C, and STD's </li>
+                  </ul>
+                </div>
+              </li>
             </ul>
           </section>
 
@@ -129,12 +150,11 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h5> <i>2020&nbsp;&ndash;&nbsp;now</i></h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Second year student</li>
+                    <li>Part of the interactive department in Production House</li>
                   </ul>
                 </div>
               </li>
@@ -145,11 +165,21 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>MBO Diploma Biomedical Analyst, Summa College at Eindhoven</h4>
+                  <h5><i>2020</i></h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
+                    <li>Specialization in mircobiology</li>
                   </ul>
+                </div>
+              </li>
+                
+                 <li class="biography-item row mb-2">
+                <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                </div>
+                <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
+                  <h4>VMBO-t Diploma, WereDi at Valkenswaard</h4>
+                  <h5><i>2018</i></h5>
                 </div>
               </li>
             </ul>
@@ -180,12 +210,6 @@
                 <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
                   email@buas.nl
-                </a>
-              </li>
-              <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
                 </a>
               </li>
               <li class="contact-item">
@@ -226,15 +250,7 @@
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Spanish</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
-                </div>
-              </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
+                <h5 class="language-name w-50">Norwegian</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
@@ -249,8 +265,8 @@
           <section class="my-3 aside-section">
             <h2><strong>Other Skills</strong></h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
+              <li class="skill-item">Individualist and team player</li>
+              <li class="skill-item">Organizing and Planning</li>
               <li class="skill-item">Driving Licence</li>
             </ul>
           </section>
@@ -260,8 +276,8 @@
           <section class="my-3 aside-section">
             <h2><strong>Interests &amp; Hobbies</strong></h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Digital Drawing</li>
+              <li class="skill-item">Reading Books</li>
             </ul>
           </section>
 
