colors and some headings

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder funky-text">Anne Mitzer</h1>
-          <h5 class="text-header">Second Year Student Creative Business at Breda University of Applied Science.&nbsp;&nbsp;</h5>
+          <h6 class="text-header">Second Year Student Creative Business at Breda University of Applied Science.&nbsp;&nbsp;</h6>
         </div>
       </header>
 
@@ -81,7 +81,7 @@
             <section> is yet another semantic element. The first one is for professional experience.
           -->
           <section class="my-3 biography-section heading">
-            <h2><strong>Professional Experience</strong></h2>
+            <h1><strong>Professional Experience</strong></h1>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
               "list-unstyled" is a class that hides the bullet points of a list.
@@ -95,7 +95,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo_albertheijn.svg" alt="Logo Albert Heijn" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Cashier Albert Heijn</h4>
+                  <h3><strong>Cashier at Albert Heijn</strong></h3>
                   <h5><i>September 2021&ndash;Now</i></h5>
                     <h5><i>September 2017&ndash;August 2019</i></h5>
                   <!-- Use the list below to talk about your achievements -->
@@ -115,7 +115,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo_swinkelsfamiliybrewers.png" alt="Logo Royal Swinkels Family Brewers" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Microbiological Analyst, Royal Swinkels Family Brewers</h4>
+                  <h3><strong>Microbiological Analyst, Royal Swinkels Family Brewers</strong></h3>
                   <h5><i>January 2020 &ndash; June 2020</i></h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                     <ul class="biography-details list-unstyled">
@@ -131,7 +131,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo-mumc.png" alt="Logo Maastricht UMC+" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Molecular &ndash; Biological Analyst, Maastricht UMC +</h4>
+                  <h3> <strong>Molecular &ndash; Biological Analyst, Maastricht UMC +</strong></h3>
                   <h5><i>August 2019 &ndash; January 2020</i></h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
@@ -146,7 +146,7 @@
           <!-- We're done with jobs, let's move on to schools -->
 
           <section class="my-3 biography-section">
-            <h2><strong>Education</strong></h2>
+            <h1><strong>Education</strong></h1>
             <ul class="biography-list list-unstyled">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
@@ -155,7 +155,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo-buas.svg" alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
+                  <h3><strong>BA in Creative Business, Breda University of Applied Sciences</strong></h3>
                   <h5> <i>2020&nbsp;&ndash;&nbsp;now</i></h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
@@ -171,7 +171,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo_summacollege.png" alt="Logo Summa College" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>MBO Diploma Biomedical Analyst, Summa College at Eindhoven</h4>
+                  <h3><strong>MBO Diploma Biomedical Analyst, Summa College at Eindhoven</strong></h3>
                   <h5><i>2020</i></h5>
                   <ul class="biography-details list-unstyled">
                     <li>Specialization in mircobiology</li>
@@ -184,7 +184,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo_weredi.png" alt="Logo WereDi" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>VMBO-t Diploma, WereDi at Valkenswaard</h4>
+                  <h3><strong>VMBO-t Diploma, WereDi at Valkenswaard</strong></h3>
                   <h5><i>2016</i></h5>
                 </div>
               </li>
