--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
-                  <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
+                  <img class="contact-icon" src="images/icons/envelope_new.svg" alt="Email">
                   200696@buas.nl
                 </a>
               </li>
@@ -226,7 +226,7 @@
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="tel:+31612345678" target="_blank">
-                  <img class="contact-icon" src="images/icons/phone.svg" alt="Mobile Phone">
+                <img class="contact-icon" src="images/icons/phone_new.svg" alt="Mobile Phone">
                   +31 6 12345678
                 </a>
               </li>
