--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           A container to wrap around the portrait and align it. We use Bootstrap grid columns.
           This constrains the portrait to columns of decreasing sizes
         -->
+          <center>
         <div class="portrait-container col-5 col-sm-4 col-md-3 col-lg-2">
           <!--
             "w-100" makes sure the image takes the full width of the column it's in
@@ -56,13 +57,15 @@
           -->
           <img class="w-100 rounded-circle my-3" src="images/picture_of_me_new.jpg" alt="Portrait of Anne Mitzer" width="160">
         </div>
+          </center>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
-        -->
-        <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
+        --><center>
+        <div class="col-10 col-sm-8 col-md-9 col-lg-10 my-0 header-content"> 
           <h1 class="fw-bolder funky-text">Anne Mitzer</h1>
           <h6 class="text-header">Second Year Student Creative Business at Breda University of Applied Science.&nbsp;&nbsp;</h6>
         </div>
+          </center>
       </header>
 
       <!--
