--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           This constrains the portrait to columns of decreasing sizes
         -->
           <center>
-        <div class="portrait-container col-5 col-sm-4 col-md-3 col-lg-2">
+        <div class="portrait-container col-7 col-sm-3 col-md-3 col-lg-2">
           <!--
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
@@ -63,7 +63,7 @@
         --><center>
         <div class="col-10 col-sm-8 col-md-9 col-lg-10 my-0 header-content"> 
           <h1 class="fw-bolder funky-text">Anne Mitzer</h1>
-          <h6 class="text-header">Second Year Student Creative Business at Breda University of Applied Science.&nbsp;&nbsp;</h6>
+          <h5 class="text-header">Second Year Student Creative Business at Breda University of Applied Science.&nbsp;&nbsp;</h5>
         </div>
           </center>
       </header>
@@ -295,9 +295,11 @@
     </div>
 
     <!-- And now, a footer! -->
-    <footer class="bg-dark mt-sm-5 py-4 text-light">
+    <footer class="mt-sm-3 py-2 text-dark">
       <p class="container text-end">
+          <center>
         Created as part of the <a href="https://www.buas.nl/en/programmes/creative-business" target="_blank">Bachelor of Creative Business at Breda University of Applied Sciences.</a>
+          </center>
       </p>
     </footer>
 
