--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
               <li class="skill-item">Individualist and team player</li>
               <li class="skill-item">Organizing and Planning</li>
               <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">Thinking outside of the box&nbsp;</li>
             </ul>
           </section>
 
@@ -287,6 +288,7 @@
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Digital Drawing</li>
               <li class="skill-item">Reading Books</li>
+              <li class="skill-item">Playing Guitar&nbsp;</li>
             </ul>
           </section>
 
