changed font and color of the dates

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo_albertheijn.svg" alt="Logo Albert Heijn" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h3><strong>Cashier at Albert Heijn</strong></h3>
-                  <h5><i>September 2021&ndash;Now</i></h5>
-                    <h5><i>September 2017&ndash;August 2019</i></h5>
+                  <h4><strong>Cashier at Albert Heijn</strong></h4>
+                    <div class="dates" >
+                  <h6>September 2021&ndash;Now</h6>
+                    <h6>September 2017&ndash;August 2019</h6>
+                  </div>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
                     <li>Side job</li>
@@ -118,8 +120,10 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo_swinkelsfamiliybrewers.png" alt="Logo Royal Swinkels Family Brewers" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h3><strong>Microbiological Analyst, Royal Swinkels Family Brewers</strong></h3>
-                  <h5><i>January 2020 &ndash; June 2020</i></h5>
+                  <h4><strong>Microbiological Analyst, Royal Swinkels Family Brewers</strong></h4>
+                    <div class="dates">
+                  <h6>January 2020 &ndash; June 2020</h6>
+                    </div>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                     <ul class="biography-details list-unstyled">
                     <li>Part of my MBO study at Summa College</li>
@@ -134,8 +138,10 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo-mumc.png" alt="Logo Maastricht UMC+" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h3> <strong>Molecular &ndash; Biological Analyst, Maastricht UMC +</strong></h3>
-                  <h5><i>August 2019 &ndash; January 2020</i></h5>
+                  <h4> <strong>Molecular &ndash; Biological Analyst, Maastricht UMC +</strong></h4>
+                    <div class=dates> 
+                  <h6>August 2019 &ndash; January 2020</h6>
+                    </div>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
                     <li>Part of my MBO study at Summa College</li>
@@ -158,8 +164,10 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo-buas.svg" alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h3><strong>BA in Creative Business, Breda University of Applied Sciences</strong></h3>
-                  <h5> <i>2020&nbsp;&ndash;&nbsp;now</i></h5>
+                  <h4><strong>BA in Creative Business, Breda University of Applied Sciences</strong></h4>
+                    <div class="dates">
+                  <h6> 2020&nbsp;&ndash;&nbsp;now</h6>
+                    </div>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
                     <li>Second year student</li>
@@ -174,8 +182,10 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo_summacollege.png" alt="Logo Summa College" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h3><strong>MBO Diploma Biomedical Analyst, Summa College at Eindhoven</strong></h3>
-                  <h5><i>2020</i></h5>
+                  <h4><strong>MBO Diploma Biomedical Analyst, Summa College at Eindhoven</strong></h4>
+                    <div class="dates">
+                  <h6>2020</h6>
+                    </div>
                   <ul class="biography-details list-unstyled">
                     <li>Specialization in mircobiology</li>
                   </ul>
@@ -187,8 +197,10 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo_weredi.png" alt="Logo WereDi" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h3><strong>VMBO-t Diploma, WereDi at Valkenswaard</strong></h3>
-                  <h5><i>2016</i></h5>
+                  <h4><strong>VMBO-t Diploma, WereDi at Valkenswaard</strong></h4>
+                    <div class="dates">
+                  <h6>2016</h6>
+                    </div>
                 </div>
               </li>
             </ul>
