changed fonts headings and language boxes

--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
           <!--
             <section> is yet another semantic element. The first one is for professional experience.
           -->
-          <section class="my-3 biography-section heading">
-            <h1><strong>Professional Experience</strong></h1>
+          <section class="my-4 biography-section heading"> 
+              <center>
+              <div class="my-3 heading-text" >
+            <h2><strong>Professional Experience</strong></h2>
+              </div>
+              </center>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
               "list-unstyled" is a class that hides the bullet points of a list.
@@ -139,7 +143,7 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4> <strong>Molecular &ndash; Biological Analyst, Maastricht UMC +</strong></h4>
-                    <div class=dates> 
+                    <div class="dates"> 
                   <h6>August 2019 &ndash; January 2020</h6>
                     </div>
                   <!-- Use the list below to talk about your achievements -->
@@ -155,7 +159,10 @@
           <!-- We're done with jobs, let's move on to schools -->
 
           <section class="my-3 biography-section">
-            <h1><strong>Education</strong></h1>
+              <center>
+              <div class="my-3 heading-text">
+            <h2><strong>Education</strong></h2></div>
+              </center>
             <ul class="biography-list list-unstyled">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
@@ -219,7 +226,9 @@
 
           <!-- The first block will be contact details -->
           <section class="my-3 aside-section">
+              <div class="more-heading-text">
             <h2><strong>Contact</strong></h2>
+              </div>
             <!--
               A list of all your contact details.
               There are more icons in the images/icons folder, have a look if you want to add your LinkedIn or TikTok profile.
@@ -251,31 +260,38 @@
           <!-- End of contact details, moving on to languages -->
 
           <section class="my-3 aside-section">
-            <h2><strong>Languages</strong></h2>
+              <div class="more-heading-text">
+            <h2><strong>Languages</strong></h2></div>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Dutch</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <div class="language-level w-50 border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
+                  <div class="language-progress position-absolute bg-light h-100 w-100"></div>
+                    <div class="language-text">
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Native</h6>
+                    </div>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">English</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <div class="language-level w-50 border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-75"></div>
+                  <div class="language-progress position-absolute bg-light h-100 w-75"></div>
+                    <div class="language-text">
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Full proficiency</h6>
+                    </div>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Norwegian</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <div class="language-level w-50 border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
+                  <div class="language-progress position-absolute bg-light h-100 w-25"></div>
+                    <div class="language-text">
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
+                    </div>
                 </div>
               </li>
             </ul>
@@ -284,7 +300,8 @@
           <!-- End of contact details, moving on to other skills -->
 
           <section class="my-3 aside-section">
-            <h2><strong>Other Skills</strong></h2>
+              <div class="more-heading-text">
+            <h2><strong>Other Skills</strong></h2></div>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Individualist and team player</li>
               <li class="skill-item">Organizing and Planning</li>
@@ -296,7 +313,9 @@
           <!-- End of other skills, moving on to interest and hobbies -->
 
           <section class="my-3 aside-section">
+              <div class="more-heading-text">
             <h2><strong>Interests &amp; Hobbies</strong></h2>
+              </div>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Digital Drawing</li>
               <li class="skill-item">Reading Books</li>
