--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         --><center>
         <div class="col-10 col-sm-8 col-md-9 col-lg-10 my-0 header-content"> 
-          <h1 class="fw-bolder funky-text">Anne Mitzer</h1>
+          <h1 class="fw-bolder funky-text">ANNE MITZER</h1>
           <h5 class="text-header">Second Year Student Creative Business at Breda University of Applied Science.&nbsp;&nbsp;</h5>
         </div>
           </center>
@@ -86,7 +86,7 @@
           <section class="my-4 biography-section heading"> 
               <center>
               <div class="my-3 heading-text" >
-            <h2><strong>Professional Experience</strong></h2>
+            <h2><strong>PROFESSIONAL EXPERIENCE&nbsp;</strong></h2>
               </div>
               </center>
             <!--
@@ -161,7 +161,7 @@
           <section class="my-3 biography-section">
               <center>
               <div class="my-3 heading-text">
-            <h2><strong>Education</strong></h2></div>
+            <h2><strong>EDUCATION</strong></h2></div>
               </center>
             <ul class="biography-list list-unstyled">
 
@@ -227,7 +227,7 @@
           <!-- The first block will be contact details -->
           <section class="my-3 aside-section">
               <div class="more-heading-text">
-            <h2><strong>Contact</strong></h2>
+            <h2><strong>CONTACT</strong></h2>
               </div>
             <!--
               A list of all your contact details.
@@ -261,19 +261,23 @@
 
           <section class="my-3 aside-section">
               <div class="more-heading-text">
-            <h2><strong>Languages</strong></h2></div>
+            <h2><strong>LANGUAGES&nbsp;</strong></h2></div>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
+                <div class="aside-container-text">
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Dutch</h5>
                 <div class="language-level w-50 border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-light h-100 w-100"></div>
                     <div class="language-text">
+                        
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Native</h6>
                     </div>
                 </div>
               </li>
+                </div>
+                <div class="aside-container-text">
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">English</h5>
                 <div class="language-level w-50 border-2 position-relative">
@@ -284,6 +288,8 @@
                     </div>
                 </div>
               </li>
+                </div>
+                <div class="aside-container-text">
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Norwegian</h5>
                 <div class="language-level w-50 border-2 position-relative">
@@ -294,6 +300,7 @@
                     </div>
                 </div>
               </li>
+                </div>
             </ul>
           </section>
 
@@ -301,8 +308,8 @@
 
           <section class="my-3 aside-section">
               <div class="more-heading-text">
-            <h2><strong>Other Skills</strong></h2></div>
-            <ul class="skill-list list-unstyled">
+            <h2><strong>OTHER SKILLS</strong></h2></div>
+            <ul class="aside-container-text p-3">
               <li class="skill-item">Individualist and team player</li>
               <li class="skill-item">Organizing and Planning</li>
               <li class="skill-item">Driving Licence</li>
@@ -314,9 +321,9 @@
 
           <section class="my-3 aside-section">
               <div class="more-heading-text">
-            <h2><strong>Interests &amp; Hobbies</strong></h2>
+            <h2><strong>INTEREST &amp;HOBBIES</strong></h2>
               </div>
-            <ul class="skill-list list-unstyled">
+            <ul class="aside-container-text p-3">
               <li class="skill-item">Digital Drawing</li>
               <li class="skill-item">Reading Books</li>
               <li class="skill-item">Playing Guitar&nbsp;</li>
