changed logo's contact information

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html class="h-100" lang="en">
   
-  <!-- An HTML document always starts with a "head", i.e. information about the page that isn't directly visible -->
-  <head>
+  <!-- An HTML document always starts with a "head", i.e. information about the page that isn't directly visible --><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Links to the CSS styles from Bootstrap. -->
     <!-- -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+      <!-- Fonts used in the project -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
@@ -238,20 +238,21 @@
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
-                  <img class="contact-icon" src="images/icons/envelope_new.svg" alt="Email">
-                  200696@buas.nl
+                  <img class="contact-icon bg-light rounded" src="images/icons/envelope_new.svg" alt="Email"> <div class="ps-1">
+                  200696@buas.nl</div>
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://github.com/AnMitz" target="_blank">
-                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
+                  <img class="contact-icon bg-light rounded" src="images/icons/github.svg" alt="LinkedIn"> <div class="ps-1">
                   GitHub AnMitz
+                    </div>
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="tel:+31612345678" target="_blank">
-                <img class="contact-icon" src="images/icons/phone_new.svg" alt="Mobile Phone">
-                  +31 6 12345678
+                <img class="contact-icon bg-light rounded" src="images/icons/phone_new.svg" alt="Mobile Phone"> <div class="ps-1">
+                  +31 6 12345678</div>
                 </a>
               </li>
             </ul>
