changed page to full width

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       The "my-sm-4" class adds a margin (m) vertical (y) at sizes small (-sm-) and above, of 4 x 6 pixels
       The "resume-container" class doesn't come from Bootstrap, you can use it for your own styles
     -->
-    <div class="container shadow-lg my-sm-4 resume-container">
+    <div class="container-fluid resume-container">
 
       <!--
         <header> is a semantic element: it works exactly like <div>, but it gives information about the role of the code below.
@@ -222,7 +222,7 @@
           We now move on to the column with contact details, languages and other skills
           <aside> is also a semantic element.
         -->
-        <aside class="col-md-5 col-lg-4 col-xl-3 resume-aside">
+        <aside class="col-md-5 col-lg-4 col-xl-4 resume-aside">
 
           <!-- The first block will be contact details -->
           <section class="my-3 aside-section">
@@ -237,7 +237,7 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:200696@buas.nl" target="_blank">
                   <img class="contact-icon bg-light rounded" src="images/icons/envelope_new.svg" alt="Email"> <div class="ps-1">
                   200696@buas.nl</div>
                 </a>
