--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo_albertheijn.svg" alt="Logo Albert Heijn" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto ms-3" src="images/icons/logo_albertheijn.svg" alt="Logo Albert Heijn" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4><strong>Cashier at Albert Heijn</strong></h4>
@@ -121,7 +121,7 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo_swinkelsfamiliybrewers.png" alt="Logo Royal Swinkels Family Brewers" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto ms-3" src="images/icons/logo_swinkelsfamiliybrewers.png" alt="Logo Royal Swinkels Family Brewers" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4><strong>Microbiological Analyst, Royal Swinkels Family Brewers</strong></h4>
@@ -139,7 +139,7 @@
                   <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/icons/logo-mumc.png" alt="Logo Maastricht UMC+" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto ms-3" src="images/icons/logo-mumc.png" alt="Logo Maastricht UMC+" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4> <strong>Molecular &ndash; Biological Analyst, Maastricht UMC +</strong></h4>
@@ -168,7 +168,7 @@
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo-buas.svg" alt="School logo" width="120">
+                  <img class="biography-logo mw-100 d-block mx-auto ms-2" src="images/schools/logo-buas.svg" alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4><strong>BA in Creative Business, Breda University of Applied Sciences</strong></h4>
@@ -186,7 +186,7 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo_summacollege.png" alt="Logo Summa College" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto ms-3" src="images/schools/logo_summacollege.png" alt="Logo Summa College" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4><strong>MBO Diploma Biomedical Analyst, Summa College at Eindhoven</strong></h4>
@@ -201,7 +201,7 @@
                 
                  <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo_weredi.png" alt="Logo WereDi" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto ms-3" src="images/schools/logo_weredi.png" alt="Logo WereDi" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4><strong>VMBO-t Diploma, WereDi at Valkenswaard</strong></h4>
