--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
           <section class="my-3 aside-section">
               <div class="more-heading-text">
-            <h2><strong>INTEREST &amp;HOBBIES</strong></h2>
+            <h2><strong>INTERESTS &amp; HOBBIES</strong></h2>
               </div>
             <ul class="aside-container-text p-3">
               <li class="skill-item">Digital Drawing</li>
