deleted border since this was an error

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/picture_of_me_new.jpg" alt="Portrait of Anne Mitzer" width="160"
-               border="4px fill-light">
+          <img class="w-100 rounded-circle my-3 " src="images/picture_of_me_new.jpg" alt="Portrait of Anne Mitzer" width="160">
               </div>
          
         <!--
