made background better

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html class="h-100" lang="en">
   
-  <!-- An HTML document always starts with a "head", i.e. information about the page that isn't directly visible --><head>
+  <!-- An HTML document always starts with a "head", i.e. information about the page that isn't directly visible -->
+	<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -45,7 +46,7 @@
         The "row" class is used for the Bootstrap grid.
       -->
         
-      <header class="column resume-header justify-content-center col-12">
+      <header class="resume-header justify-content-center col-10 row">
           
         <!--
           A container to wrap around the portrait and align it. We use Bootstrap grid columns.
@@ -151,7 +152,7 @@
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
                     <li>Part of my MBO study at Summa College</li>
-                    <li>Performing molecular tests on patient samples to detect HIV, Hepatitis B and C, and STD's </li>
+                    <li>Performing molecular tests on patient samples to detect HIV, and Hepatitis B and C </li>
                   </ul>
                 </div>
               </li>
