--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
               <li class="skill-item">Digital Drawing</li>
               <li class="skill-item">Reading Books</li>
               <li class="skill-item">Playing Guitar&nbsp;</li>
+              <li class="skill-item">Hiking&nbsp;</li>
             </ul>
           </section>
 
